login simple refactor
